# Offline-election-tool

./: .gitignore  API_USAGE.md  Cargo.toml  README.md  RFP_COMPLIANCE_ASSESSMENT.md  RPC_ARCHIVE_NODES.md  RPC_TESTING.md  TESTING.md  test-data.json
.cursor/rules/: specify-rules.mdc
benches/: large_scale_benchmark.rs
docs/api/: programmatic-api.md  rest-api.md
docs/guides/: rpc-usage.md
docs/testing/: overview.md
patches/trie-db/src/: node.rs
specs/001-offline-npos-election/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-offline-npos-election/checklists/: requirements.md
specs/002-comprehensive-testing/: spec.md  tasks.md
specs/003-polkadot-mainnet-benchmarks/: spec.md  tasks.md
specs/004-repo-audit-reorganization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: engine.rs  error.rs  lib.rs  main.rs  types.rs
src/algorithms/: mod.rs  multi_phase.rs  parallel_phragmen.rs  sequential_phragmen.rs  trait_def.rs
src/api/: handlers.rs  mod.rs  models.rs  server.rs
src/cli/: commands.rs  mod.rs  output.rs
src/diagnostics/: explainer.rs  mod.rs  models.rs
src/input/: json.rs  mod.rs  rpc.rs  synthetic.rs
src/models/: election_config.rs  election_data.rs  election_overrides.rs  election_result.rs  mod.rs  nominator.rs  validator.rs  voting_edge.rs
tests/: README.md  common.rs  integration_edge_cases_zero_candidates.rs
tests/common/: assertions.rs  benchmark_utils.rs  data_generator.rs  fixture_loader.rs  memory_measurement.rs  mod.rs  models.rs  rpc_retry.rs  rpc_utils.rs
(+111 files in other folders)
