[package]
name = "offline-election"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Offline NPoS (Nominated Proof of Stake) election tool that mirrors Substrate chain election logic"
license = "MIT OR Apache-2.0"
authors = ["Offline Election Tool Contributors"]
repository = "https://github.com/your-org/offline-election-tool"

[lib]
name = "offline_election"
path = "src/lib.rs"

[[bin]]
name = "offline-election"
path = "src/main.rs"

[dependencies]
# Substrate election crates (updated to the latest compatible releases)
sp-npos-elections = "39.0"
frame-election-provider-support = "43.0"
pallet-election-provider-multi-phase = "42.0"
sp-runtime = "44.0"
parity-scale-codec = { version = "3.0", features = ["derive"] }

# RPC client
jsonrpsee = { version = "0.20", features = ["http-client", "async-client"] }

# REST API
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Hashing for storage keys (TwoX128)
twox-hash = "1.0"
# Hex encoding/decoding
hex = "0.4"

[dev-dependencies]
# Testing utilities as needed

[patch.crates-io]
trie-db = { path = "patches/trie-db" }
